<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pheebs_mobile_bot</name>
  <version>0.0.0</version>
  <description>Mobile robot for practice purposes</description>
  <maintainer email="fegaeze@gmail.com">Chioma Nkem-Eze</maintainer>
  <license>GNU General Public License (GPL)</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
